@@ -7,22 +7,27 @@ import com.chetraseng.sunrise_task_flow_api.exception.ResourceNotFoundException;
 import com.chetraseng.sunrise_task_flow_api.mapper.ProjectMapper;
 import com.chetraseng.sunrise_task_flow_api.mapper.TaskMapper;
 import com.chetraseng.sunrise_task_flow_api.model.ProjectModel;
+import com.chetraseng.sunrise_task_flow_api.model.TaskModel;
 import com.chetraseng.sunrise_task_flow_api.repository.ProjectRepository;
 import com.chetraseng.sunrise_task_flow_api.repository.TaskRepository;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
+@RequiredArgsConstructor
 public class ProjectServiceImpl implements ProjectService {
-    private ProjectRepository projectRepository;
-    private TaskRepository taskRepository;
-    private ProjectMapper projectMapper;
-    private TaskMapper taskMapper;
+    private final ProjectRepository projectRepository;
+    private final TaskRepository taskRepository;
+    private final ProjectMapper projectMapper;
+    private final TaskMapper taskMapper;
 
     @Override
     public List<ProjectResponse> findAll() {
-        return projectRepository.findAll().stream().map(projectMapper::toProjectResponse).toList();
+        return projectRepository.findAll().stream().map(projectMapper::toProjectResponse).collect(Collectors.toList());
     }
 
     @Override
@@ -35,14 +40,15 @@ public class ProjectServiceImpl implements ProjectService {
     @Override
     @Transactional
     public ProjectResponse create(ProjectRequest request) {
-        return null;
+        ProjectModel project = projectMapper.toModel(request);
+        return projectMapper.toProjectResponse((projectRepository.save(project)));
     }
 
     @Override
     public ProjectResponse update(Long id, ProjectRequest request) {
         ProjectModel existingProject = projectRepository.findById(id)
                 .orElseThrow(()-> new ResourceNotFoundException("Project not found with id: "+id));
-        existingProject.setName(request.getName());
+        projectMapper.updateModel(existingProject, request);
         return projectMapper.toProjectResponse(projectRepository.save(existingProject));
     }
 
@@ -51,6 +57,8 @@ public class ProjectServiceImpl implements ProjectService {
         if (!projectRepository.existsById(id)) {
             throw new ResourceNotFoundException("Project not found with id: "+id);
         }
+        List<TaskModel> tasks = taskRepository.findByProjectId(id);
+        taskRepository.deleteAll(tasks);
         projectRepository.deleteById(id);
     }
 
